--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=todo
-spring.data.mongodb.uri=mongodb://localhost:27017/tododb
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tasks
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
